Made changes to training script

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ coverage.xml
 *.h5
 keras_retinanet/.vscode/.ropeproject/config.py
 keras_retinanet/.vscode/.ropeproject/objectdb
+.ipynb_checkpoints/
